# stateapi

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
protos/: orm.proto  orm_pb2.py  orm_pb2.pyi  orm_pb2_grpc.py  simple.proto  simple_pb2.py  simple_pb2_grpc.py
tests/test_grpc/: test_hello.py
tests/test_orm/: test_builder.py  test_db.py  test_delete.py  test_insert.py  test_query.py  test_spec.py
tests/test_sdk/: test_build.py  test_delete.py  test_insert.py  test_update.py
wwqdrh/stateapi/: __init__.py  __main__.py  app.py  config.py  logger.py
wwqdrh/stateapi/api/: __init__.py  orm.py
wwqdrh/stateapi/pkg/orm/: base.py  builder.py  delete.py  insert.py  query.py  source.py  spec.py  update.py
wwqdrh/stateapi/sdk/: build.py  delete.py  globals.py  insert.py  query.py  update.py
